<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.haydar.haydarshariff_comp304lab3.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/examleBtn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnText1" />

        <Button
            android:id="@+id/examleBtn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnText2" />

        <Button
            android:id="@+id/examleBtn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnText3" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>